--- a/src/components/AddPost/style.css
+++ b/src/components/AddPost/style.css
@@ -1,19 +1,8 @@
-#addPostForm[data-theme='light'] {
-  --bg-color: #b8c0e2;
-  --text-color: #000;
-  --border-color: #a2a7c1;
-}
-#addPostForm[data-theme='dark'] {
-  --bg-color: #0E1223;
-  --text-color: #fff;
-  --border-color: #384162;
-}
-
 #addPostForm {
   width: 40%;
   height: 70px;
   box-sizing: border-box;
-  background-color: var(--bg-color);
+  background-color: var(--comp-bg-color);
   color: var(--text-color);
   border: 2px solid var(--border-color);
   margin: auto;
