--- a/src/components/AuthPage/style.css
+++ b/src/components/AuthPage/style.css
@@ -1,17 +1,3 @@
-.authPage[data-theme='light'] {
-  --bg-color: #b8c0e2;
-  --text-color: #000;
-  --border-color: #a2a7c1;
-  --small-text-color: #666e89;
-}
-
-.authPage[data-theme='dark'] {
-  --bg-color: #0E1223;
-  --text-color: #fff;
-  --border-color: #384162;
-  --small-text-color: #8791B7;
-}
-
 .authPage {
     display: flex;
     flex-direction: column;
@@ -47,7 +33,7 @@
 .authBox input {
     padding: 10px 12px;
     border: 2px solid var(--border-color);
-    background-color: var(--bg-color);
+    background-color: var(--comp-bg-color);
     color: var(--text-color);
     font-size: 14px;
 }
