--- a/src/components/Post/style.css
+++ b/src/components/Post/style.css
@@ -1,20 +1,5 @@
-[data-theme='light'] .post {
-  --bg-color: #b8c0e2;
-  --text-color: #000;
-  --border-color: #a2a7c1;
-  --small-text-color: #666e89;
-}
-
-[data-theme='dark'] .post {
-  --bg-color: #0E1223;
-  --text-color: #fff;
-  --border-color: #384162;
-  --small-text-color: #8791B7;
-}
-
-
 .post {
-    background-color: var(--bg-color);
+    background-color: var(--comp-bg-color);
     border: 2px solid var(--border-color);
     color: var(--text-color);
     padding: 20px;
