--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,17 +1,3 @@
-.sidebar[data-theme='light'] {
-  --bg-color: #b8c0e2;
-  --text-color: #000;
-  --border-color: #a2a7c1;
-  --small-text-color: #666e89;
-}
-.sidebar[data-theme='dark'] {
-  --bg-color: #0E1223;
-  --text-color: #fff;
-  --border-color: #384162;
-  --small-text-color: #8791B7;
-}
-
-
 .sidebar {
     position: absolute;
     top: -70px;
@@ -31,7 +17,7 @@
     height: auto;
     box-sizing: border-box;
     overflow: hidden;
-    background-color: var(--bg-color);
+    background-color: var(--comp-bg-color);
     border: 2px solid var(--border-color);
     padding: 15px;
     margin-bottom: 10px;
